refactor(security): 优化CORS配置中的集合创建方式
- 移除未使用的List导入
- 将List.of()替换为Arrays.asList()以提高兼容性
- 统一集合创建方式，避免使用不可变列表工厂方法